Mudança do plano de fundo e revisão dos exercícios.

--- a/MyCSS.css
+++ b/MyCSS.css
@@ -6,7 +6,7 @@ html{
 	font-size:12px;
 }
 body{
-	background:#000000 url(https://img.freepik.com/vetores-gratis/plano-de-fundo-verde-abstrato-geometrico_23-2148359494.jpg?size=626&ext=jpg) center top no-repeat;
+	background:#000000 url(./plano-de-fundo.jpg) center top no-repeat;
 	background-size:100%;
 	background-attachment:fixed;
 
