--- a/MyCSS.css
+++ b/MyCSS.css
@@ -1,114 +1,115 @@
 /* Meu CSS */
 body,
-html{
-	margin:  0; 
+html {
+	margin: 0;
 	padding: 0;
-	font-size:12px;
+	font-size: 12px;
 }
-body{
-	background:#000000 url(./plano-de-fundo.jpg) center top no-repeat;
-	background-size:100%;
-	background-attachment:fixed;
+body {
+	background: #000000 url(./plano-de-fundo.jpg) center top no-repeat;
+	background-size: 100%;
+	background-attachment: fixed;
+}
 
+a,
+a img {
+	text-decoration: none;
+	border: none;
 }
-
-a, a img{
-	text-decoration:none;
-	border:none;
+img {
+	max-width: 100%;
+	height: auto;
 }
-img{
-	max-width:100%;
-	height:auto;
-}
-.principal{
+.principal {
 	width: 960px;
 	color: #000000;
 	margin: 0 auto;
-	font-family:sans-serif;
+	font-family: sans-serif;
 }
-.cabecalho, 
-.logo, 
+.cabecalho,
+.logo,
 .rodape,
-.menu{
-	width:100%;
-	display:block;
-	clear:both;
+.menu {
+	width: 100%;
+	display: block;
+	clear: both;
 }
-.cabecalho{
-	height:90px;
+.cabecalho {
+	height: 90px;
 }
-.logo-cabecalho{
-	float:left;
+.logo-cabecalho {
+	float: left;
 }
-.logo-cabecalho a{
-	font-size:35px;
-	font-style:italic;
-	text-decoration:none;
-	color:#000;
-	display:block;
-	padding:20px 0 0 0;
+.logo-cabecalho a {
+	font-size: 35px;
+	font-style: italic;
+	text-decoration: none;
+	color: #000;
+	display: block;
+	padding: 20px 0 0 0;
 }
-.pesquisa{
-	float:right;
-	margin-top:40px;
-	margin-right:5px;
+.pesquisa {
+	float: right;
+	margin-top: 40px;
+	margin-right: 5px;
 }
-.menu{
-	background:#f1f1f1;
+.menu {
+	background: #f1f1f1;
 }
-.menu ul li, 
-.menu ul{
-	margin:0;
-	padding:0;
-	list-style:none;
+.menu ul li,
+.menu ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
-.menu ul li{
-	display:inline-block;
+.menu ul li {
+	display: inline-block;
 }
-.menu ul li a{
-	display:block;
-	color:#f1f1f1;
-	padding:13px 20px;
+.menu ul li a {
+	display: block;
+	color: #f1f1f1;
+	padding: 13px 20px;
 }
-.corpo{
-	position:relative;
-	overflow:hidden;
+.corpo {
+	position: relative;
+	overflow: hidden;
 }
-.artigos{
-	float:left;
+.artigos {
+	float: left;
 }
-.artigos, .artigos:before{
-	width:82%;
+.artigos,
+.artigos:before {
+	width: 82%;
 }
-.artigos:before{
-	position:absolute;
-	top:0;
-	left:0;
-	bottom:0;
-	background:#fff;
-	z-index:-1;
-	content:'';
+.artigos:before {
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	background: #fff;
+	z-index: -1;
+	content: "";
 }
-.barra-lateral{
-	float:right;
+.barra-lateral {
+	float: right;
 }
-.barra-lateral, .barra-lateral:before{
-	width:18%;
+.barra-lateral,
+.barra-lateral:before {
+	width: 18%;
 }
-.barra-lateral:before{
-   /*content: '';/*
+.barra-lateral:before {
+	/*content: '';/*
     /*position: absolute;*/
-    top: 0;
-    bottom: 0;
-	right:0;
-    z-index: -1;
-    background: #f1f1f1;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	z-index: -1;
+	background: #f1f1f1;
 }
-.espacamento{
-	padding:20px;
-
+.espacamento {
+	padding: 20px;
 }
-.rodape{
-	padding:10px;
-	text-align:center;
+.rodape {
+	padding: 10px;
+	text-align: center;
 }
